style: background color

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -36,4 +36,10 @@ import Card from '../components/Card.astro';
         </a>`
     }
   })
-</script> r
+</script> 
+
+<style>
+	html{
+		background-color: aliceblue!important;;
+	}
+</style>
